2003-04-28  NAKAJIMA Mikio  <minakaji@namazu.org>

	* shimbun/sb-sml.el: New file.

2003-04-26  NAKAJIMA Mikio  <minakaji@namazu.org>

	* shimbun/sb-mailman.el (shimbun-mailman-headers): Call
	`shimbun-mime-encode-string' for FROM.

	* shimbun/sb-squeak-ja.el: New file.
	Require cl when compiling.
	(shimbun-squeak-ja-make-contents): New function.
	(shimbun-make-contents): New method.
	(shimbun-squeak-ja-make-contents): Declare ADDRESS, NAME and DATE
	as temporary variable.
	Set proper address to HEADER.
	(shimbun-squeak-ja-headers): New function.
	(shimbun-headers): New method.
	
2003-04-16  Chihiro Kuroda  <chee@iijmio-mail.jp>

	* w3m.el (w3m-download): Download a directory url to index.html
	(by default) instead of signaling an error.

2003-04-15  Katsumi Yamaoka  <yamaoka@jpl.org>

	* shimbun/sb-mainichi.el (shimbun-make-contents): Return nil when
	an article couldn't be gotten.

2003-04-11  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el (w3m-local-find-file-regexps): New user option.
	(w3m-local-find-file-function): New user option.
	(w3m-goto-url): Use the function specified by the
	`w3m-local-find-file-function' variable for local files when
	the file name matches the `w3m-local-find-file-regexps' variable.

2003-04-07  ARISAWA Akihiro  <ari@namazu.org>

	* shimbun/sb-ding.el: Removed.

2003-04-05  NAKAJIMA Mikio  <minakaji@namazu.org>

	* shimbun/sb-anthy.el (shimbun-anthy-url): Remove slash at the end.

2003-04-04  Hideyuki SHIRAI  <shirai@meadowy.org>

	* w3m-search.el (w3m-search-engine-alist): Change coding-system to
	`euc-japan' of "waei" and "kokugo". Tnx, Mr. Saito (sai@yedo.com)
	for his report.

2003-03-30  NAKAJIMA Mikio  <minakaji@namazu.org>

	* shimbun/sb-canna-dev.el: New file.

2003-03-26  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* w3m-antenna.el (w3m-antenna-check-all-sites): Call `make-symbol'
	instead of `gensym', in order to make this function free from
	runtime CL functions.

2003-03-21  NAKAJIMA Mikio  <minakaji@namazu.org>
